@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.module.tulip" name="Tulip Routine Libraries" version="2.0.6" provider-name="Twilight0">
+<addon id="script.module.tulip" name="Tulip Routine Libraries" version="2.0.7" provider-name="Twilight0">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0"/>
 	</requires>
@@ -23,6 +23,7 @@
 - Added login support for client.request module
 - Added orderdict conditional into compat module
 - Added multiprocess support along with multithreading into workers module
-  > Will not work on Android so fallback to threading has been added</news>
+  > Will not work on Android so fallback to threading has been added
+- Various other efficiency tweaks</news>
 	</extension>
 </addon>
